--- a/about.css
+++ b/about.css
@@ -151,12 +151,13 @@
 
 .cards:hover
 {
-    width: 20.1rem;
-    height: 10.1rem;
+    /* width: 20.1rem;
+    height: 10.1rem; */
     background-color: rgb(143, 143, 224);
     border-radius: 8px;
-    box-shadow: 4px 6px rgba(0, 0, 0, 0.329);
-    transition: all 0.1s ease 0s;
+    box-shadow: 0px 0px 20px rgb(0, 0, 0);
+    transition: all 0.5s ease 0.01s;
+    cursor: default;
 
 }
 
